--- a/src/stylesheets/_basic.scss
+++ b/src/stylesheets/_basic.scss
@@ -8,7 +8,7 @@ html, body{
 body{
   margin:0;
   background:$grey;
-  font-size: 2px;
+  font-size: 1px;
 }
 
 
@@ -20,4 +20,38 @@ body{
   width: 335em;
   margin:0 auto;
   position: relative;
+}
+
+#error{
+  position: fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  font-size:16px;
+  font-family: sans-serif;
+  background: #d83651;
+  padding:30px;
+  text-align: center;
+  color:#fff;
+  z-index:1000;
+}
+
+@media screen and (min-width:690px) {
+  body{
+    font-size: 2px;
+  }
+}
+
+
+@media screen and (min-width:1100px) {
+  body{
+    font-size:3px;
+  }
+}
+
+
+@media screen and (min-width:1400px) {
+  body{
+    font-size:4px;
+  }
 }
